--- a/hw8-litvina-cursor/index.css
+++ b/hw8-litvina-cursor/index.css
@@ -122,6 +122,7 @@
     color: white;
     font-size: 24px;
     font-weight: 600;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .button{
@@ -131,6 +132,7 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
+    
 }
 
 .button::before{
